poc: dumpers with better prefix

--- a/poc/CMakeLists.txt
+++ b/poc/CMakeLists.txt
@@ -1,14 +1,16 @@
 function(dumper NAME)
-  add_executable(poc-${NAME})
-  target_sources(poc-${NAME} PRIVATE poc-${NAME}.cpp)
-  target_link_libraries(poc-${NAME} PRIVATE oto-headers)
+  set(TARGET dump-${NAME})
 
-  add_test(NAME poc-${NAME}-create COMMAND poc-${NAME})
-  add_test(NAME poc-${NAME}-compare
+  add_executable(${TARGET})
+  target_sources(${TARGET} PRIVATE dump-${NAME}.cpp)
+  target_link_libraries(${TARGET} PRIVATE oto-headers)
+
+  add_test(NAME ${TARGET}-create COMMAND ${TARGET})
+  add_test(NAME ${TARGET}-compare
     COMMAND ${CMAKE_COMMAND} -E compare_files --ignore-eol
-            ${CMAKE_CURRENT_SOURCE_DIR}/poc-${NAME}.yaml
-            ${CMAKE_CURRENT_BINARY_DIR}/poc-${NAME}.yaml)
-  set_tests_properties(poc-${NAME}-compare PROPERTIES DEPENDS poc-${NAME}-create)
+    ${CMAKE_CURRENT_SOURCE_DIR}/${TARGET}.yaml
+    ${CMAKE_CURRENT_BINARY_DIR}/${TARGET}.yaml)
+  set_tests_properties(${TARGET}-compare PROPERTIES DEPENDS ${TARGET}-create)
 endfunction()
 
 dumper(action)
