update casein + block crosscompiler

--- a/poc/CMakeLists.txt
+++ b/poc/CMakeLists.txt
@@ -1,4 +1,8 @@
 function(dumper NAME)
+  if (CMAKE_CROSSCOMPILING)
+    return()
+  endif()
+
   set(TARGET dump-${NAME})
 
   add_executable(${TARGET})
